--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -7,6 +7,7 @@ members = [
   "chains/hyperlane-ethereum",
   "chains/hyperlane-fuel",
   "chains/hyperlane-sealevel",
+  "chains/hyperlane-aptos",
   "ethers-prometheus",
   "hyperlane-base",
   "hyperlane-core",
@@ -111,7 +112,7 @@ parking_lot = "0.12"
 paste = "1.0"
 pretty_env_logger = "0.5.0"
 primitive-types = "=0.12.1"
-prometheus = "0.13"
+prometheus = { version = "0.13.3", default-features = false }
 regex = "1.5"
 reqwest = "0.11"
 ripemd = "0.1.3"
@@ -182,6 +183,16 @@ which = "4.3"
 ## TODO: remove this
 cosmwasm-schema = "1.2.7"
 
+## For Aptos Move
+bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
+once_cell = "1.18.0"
+rand = "0.7.3"
+
+[workspace.dependencies.aptos-sdk]
+git = "https://github.com/blockchainlover2019/aptos-core"
+branch = "sovereign-labs-rollup"
+## End
+
 [workspace.dependencies.ethers]
 features = []
 git = "https://github.com/hyperlane-xyz/ethers-rs"
@@ -212,10 +223,13 @@ branch = "v3.2.2-relax-zeroize"
 git = "https://github.com/Eclipse-Laboratories-Inc/curve25519-dalek"
 version = "3.2.2"
 
+## mvmt patch; These changes are for Aptos Move
 [patch.crates-io.ed25519-dalek]
 branch = "main"
-git = "https://github.com/Eclipse-Laboratories-Inc/ed25519-dalek"
+#git = "https://github.com/Eclipse-Laboratories-Inc/ed25519-dalek"
+#version = "1.0.1"
 version = "1.0.1"
+git = "https://github.com/blockchainlover2019/ed25519-dalek"
 
 [patch.crates-io.primitive-types]
 branch = "hyperlane"
