--- a/rust/hyperlane-base/Cargo.toml
+++ b/rust/hyperlane-base/Cargo.toml
@@ -50,6 +50,7 @@ hyperlane-ethereum = { path = "../chains/hyperlane-ethereum" }
 hyperlane-fuel = { path = "../chains/hyperlane-fuel" }
 hyperlane-sealevel = { path = "../chains/hyperlane-sealevel" }
 hyperlane-cosmos = { path = "../chains/hyperlane-cosmos"}
+hyperlane-aptos = { path = "../chains/hyperlane-aptos" }
 hyperlane-test = { path = "../hyperlane-test" }
 
 # dependency version is determined by etheres
