--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -6,6 +6,7 @@ members = [
     "chains/hyperlane-ethereum",
     "chains/hyperlane-fuel",
     "chains/hyperlane-sealevel",
+    "chains/hyperlane-aptos",
     "ethers-prometheus",
     "hyperlane-base",
     "hyperlane-core",
@@ -95,7 +96,7 @@ parking_lot = "0.12"
 paste = "1.0"
 pretty_env_logger = "0.5.0"
 primitive-types = "=0.12.1"
-prometheus = "0.13"
+prometheus = { version = "0.13.3", default-features = false }
 regex = "1.5"
 reqwest = "0.11"
 rlp = "=0.5.2"
@@ -146,6 +147,14 @@ walkdir = "2"
 warp = "0.3"
 which = "4.3"
 
+bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
+once_cell = "1.18.0"
+rand = "0.7.3"
+
+[workspace.dependencies.aptos-sdk]
+git = "https://github.com/blockchainlover2019/aptos-core"
+branch = "sovereign-labs-rollup"
+
 [workspace.dependencies.ethers]
 git = "https://github.com/hyperlane-xyz/ethers-rs"
 tag = "2023-06-01"
@@ -178,7 +187,7 @@ branch = "v3.2.2-relax-zeroize"
 
 [patch.crates-io.ed25519-dalek]
 version = "1.0.1"
-git = "https://github.com/Eclipse-Laboratories-Inc/ed25519-dalek"
+git = "https://github.com/blockchainlover2019/ed25519-dalek"
 branch = "main"
 
 [patch.crates-io.primitive-types]
