--- a/rust/chains/hyperlane-aptos/Cargo.toml
+++ b/rust/chains/hyperlane-aptos/Cargo.toml
@@ -22,6 +22,7 @@ tracing-futures.workspace = true
 tracing.workspace = true
 url.workspace = true
 tokio.workspace = true
+derive-new.workspace = true
 
 aptos-sdk.workspace = true
 once_cell.workspace = true
